# nt-bot.v2

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.cmd  run.ps1  setup.py
.github/workflows/: python-publish.yml
data/: guild.txt  known_timeroles.json  timeroles.json
nordic_bot/src/: constant.py  main.py  modals.py  test.py
src/: constant.py  item_db.py  main.py  ntbot.py  timerole.py  utility.py  views.py
